--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="build/styles/main.css">
 </head>
 <body>
-    <header>
-        <img src="./imagens/eu-preto-e-branco.jpg"/>
-        <h1>Página do Leonardo</h1>
-        <h2>Engenheiro Front-end</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quo optio eum explicabo error laboriosam velit, blanditiis architecto quam numquam molestiae molestias amet suscipit illo maiores odio in neque tenetur.
-        </p>
+    <div class="container">
+        <header>
+            <img src="https://placehold.co/200x200"/>
+            <h1>Página do Leonardo</h1>
+            <h2>Engenheiro Front-end</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quo optio eum explicabo error laboriosam velit, blanditiis architecto quam numquam molestiae molestias amet suscipit illo maiores odio in neque tenetur.
+            </p>
+        </header>
         <nav>
             <ul>
                 <li><a href="">Instagram</a></li>
@@ -21,7 +23,7 @@
                 <li><a href=""></a>Github</li>
                 <li><a href=""></a>E-mail</li>
             </ul>
-        </nav>
-    </header>
+        </nav>        
+    </div>
 </body>
 </html>
