--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Páginal do Leonardo</title>
     <link rel="stylesheet" href="build/styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="https://placehold.co/200x200"/>
-            <h1>Página do Leonardo</h1>
-            <h2>Engenheiro Front-end</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quo optio eum explicabo error laboriosam velit, blanditiis architecto quam numquam molestiae molestias amet suscipit illo maiores odio in neque tenetur.
-            </p>
+            <img class="profile-avatar" src="https://placehold.co/96x96"/>
+            <div class="profile-bio">
+                <h1 class="profile-bio-name">Página do Leonardo</h1>
+                <h2 class="profile-bio-subtitle">Engenheiro Front-end</h2>
+                <p class="profile-bio-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quo optio eum explicabo error laboriosam velit, blanditiis architecto quam numquam molestiae molestias amet suscipit illo maiores odio in neque tenetur.
+                </p>
+            </div>
         </header>
         <nav>
             <ul>
                 <li><a href="">Instagram</a></li>
-                <li><a href=""></a>Linkedin</li>
-                <li><a href=""></a>Github</li>
-                <li><a href=""></a>E-mail</li>
+                <li><a href="">Linkedin</a></li>
+                <li><a href="">Github</a></li>
+                <li><a href="">E-mail</a></li>
             </ul>
         </nav>        
     </div>
