--- a/index.html
+++ b/index.html
@@ -22,11 +22,27 @@
             </div>
         </header>
         <nav>
-            <ul>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Linkedin</a></li>
-                <li><a href="">Github</a></li>
-                <li><a href="">E-mail</a></li>
+            <ul class="social-links">
+                <li>
+                    <a href="">
+                        <img src="./icones/instagram.svg" alt="icone instagram"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./icones/linkedin.svg" alt="icone linkedin"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./icones/github.svg" alt="icone github"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./icones/mail.svg" alt="icome email"/>
+                    </a>
+                </li>
             </ul>
         </nav>        
     </div>
