Finalizando projeto de pagina pessoal

--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
                     </a>
                 </li>
             </ul>
+        </nav>
+        <nav>
+            <ul class="projects-list">
+                <li class="projects-list-item">
+                    <a href="">
+                        Visite nosso projeto "Calculadora de médias"
+                    </a>
+                </li>
+                <li class="projects-list-item">
+                    <a href="">
+                        Visite nosso projeto "Games Shop"
+                    </a>
+                </li>
+                <li class="projects-list-item">
+                    <a href="">
+                        Visite nosso projeto "Galeria de fotos"
+                    </a>
+                </li>
+            </ul>
         </nav>        
     </div>
 </body>
