--- a/index.html
+++ b/index.html
@@ -1,69 +1,79 @@
 <!DOCTYPE html>
-<html lang="pr-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Páginal do Leonardo</title>
-    <link rel="stylesheet" href="build/styles/main.css">
+    <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="build/styles/main.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img class="profile-avatar" src="https://placehold.co/96x96"/>
-            <div class="profile-bio">
-                <h1 class="profile-bio-name">Página do Leonardo</h1>
-                <h2 class="profile-bio-subtitle">Engenheiro Front-end</h2>
-                <p class="profile-bio-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quo optio eum explicabo error laboriosam velit, blanditiis architecto quam numquam molestiae molestias amet suscipit illo maiores odio in neque tenetur.
-                </p>
+    <header>
+        <div class="container">
+            <div class="branding">
+                <img src="https://placehold.co/120x70" />
             </div>
-        </header>
-        <nav>
-            <ul class="social-links">
-                <li>
-                    <a href="">
-                        <img src="./icones/instagram.svg" alt="icone instagram"/>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <a href="#">Início</a>
+                    </li>
+                    <li>
+                        <a href="#">Produtos</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section>
+        <div class="container">
+            <h2>Produtos</h2>
+            <ul class="products">
+                <li class="products-item">
+                    <img src="https://placehold.co/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="products-button">
+                        Ver detalhes
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./icones/linkedin.svg" alt="icone linkedin"/>
+                <li class="products-item">
+                    <img src="https://placehold.co/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="products-button">
+                        Ver detalhes
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./icones/github.svg" alt="icone github"/>
+                <li class="products-item">
+                    <img src="https://placehold.co/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="products-button">
+                        Ver detalhes
                     </a>
                 </li>
-                <li>
-                    <a href="">
-                        <img src="./icones/mail.svg" alt="icome email"/>
+                <li class="products-item">
+                    <img src="https://placehold.co/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="products-button">
+                        Ver detalhes
                     </a>
                 </li>
             </ul>
-        </nav>
-        <nav>
-            <ul class="projects-list">
-                <li class="projects-list-item">
-                    <a href="">
-                        Visite nosso projeto "Calculadora de médias"
-                    </a>
-                </li>
-                <li class="projects-list-item">
-                    <a href="">
-                        Visite nosso projeto "Games Shop"
-                    </a>
-                </li>
-                <li class="projects-list-item">
-                    <a href="">
-                        Visite nosso projeto "Galeria de fotos"
-                    </a>
-                </li>
-            </ul>
-        </nav>        
-    </div>
+        </div>
+    </section>
 </body>
 </html>
