alterações para pagina pessoal personalizada

--- a/index.html
+++ b/index.html
@@ -12,34 +12,37 @@
 <body>
     <div class="container">
         <header>
-            <img class="profile-avatar" src="https://placehold.co/96x96"/>
+            <img class="profile-avatar" src="./imagens/foto-perfil.png"/>
             <div class="profile-bio">
-                <h1 class="profile-bio-name">Página do Leonardo</h1>
+                <h1 class="profile-bio-name">Leonardo Tatarin</h1>
                 <h2 class="profile-bio-subtitle">Engenheiro Front-end</h2>
                 <p class="profile-bio-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quo optio eum explicabo error laboriosam velit, blanditiis architecto quam numquam molestiae molestias amet suscipit illo maiores odio in neque tenetur.
+                    Sou engenheiro front-end em formação e atuo como representante comercial de empresas de equipamentos para construção civil, atendendo principalmente <a class="text-destac">locadoras de equipamentos e representantes comerciais.</a>
+                </p>
+                <p class="profile-bio-description">
+                    Desenvolvo landing pages voltadas ao setor de <a>locação e representação comercial</a>, ajudando empresas a fortalecer sua presença no marketing digital e competir com negócios que já estão na web.
                 </p>
             </div>
         </header>
         <nav>
             <ul class="social-links">
                 <li>
-                    <a href="">
+                    <a href="https://www.instagram.com/leotatarin/">
                         <img src="./icones/instagram.svg" alt="icone instagram"/>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://www.linkedin.com/in/leonardo-augusto-moura-tatarin-9bb84b262/">
                         <img src="./icones/linkedin.svg" alt="icone linkedin"/>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://github.com/LeoTatarin">
                         <img src="./icones/github.svg" alt="icone github"/>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="mailto:tatarinleo@gmail.com">
                         <img src="./icones/mail.svg" alt="icome email"/>
                     </a>
                 </li>
@@ -48,22 +51,32 @@
         <nav>
             <ul class="projects-list">
                 <li class="projects-list-item">
-                    <a href="">
-                        Visite nosso projeto "Calculadora de médias"
+                    <a href="https://mt-rep.vercel.app/">
+                        Projeto simplificado representação comercial
                     </a>
                 </li>
                 <li class="projects-list-item">
-                    <a href="">
-                        Visite nosso projeto "Games Shop"
+                    <a href="https://plugins-j-query-8e0w422fm-leotatarins-projects.vercel.app/">
+                        Projeto simplificado de loja de veiculos
                     </a>
                 </li>
                 <li class="projects-list-item">
-                    <a href="">
-                        Visite nosso projeto "Galeria de fotos"
+                    <a href="https://projeto3-brown-three.vercel.app/">
+                        Projeto simplificado de pizzaria
+                    </a>
+                </li>
+                <li class="projects-list-item">
+                    <a href="https://fundamentos-bootstrap-delta.vercel.app/">
+                        Projeto simplificado de evento
                     </a>
                 </li>
             </ul>
         </nav>        
+    </div>
+    <div class="botao-whats">
+        <a href="https://wa.me/5541991342806" target="_blank" >
+            <img src="./icones/whatsapp.svg" alt="WhatsApp" width="50" height="50">
+        </a>
     </div>
 </body>
 </html>
